[project]
name = "agent-dp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.18.0",
    "google-cloud-aiplatform>=1.126.1",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.2",
    "langgraph>=1.0.3",
]
